--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ecommerce-website-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "vikasz1.github.io",
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,6 +17,7 @@
     "react-slick": "^0.28.1",
     "reactstrap": "^9.0.1",
     "remixicon": "^2.5.0",
+    "save-dev": "^0.0.1-security",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
@@ -22,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
