--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-website-1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "vikasz1.github.io",
+  "homepage": "https://vikasz1.github.io",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.15.0",
